--- a/App/src/main/res/layout-land/activity_add_new_alarm.xml
+++ b/App/src/main/res/layout-land/activity_add_new_alarm.xml
@@ -110,7 +110,7 @@
                 android:layout_centerHorizontal="true" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textBlock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
