--- a/App/src/main/res/layout/activity_badge_achievemts.xml
+++ b/App/src/main/res/layout/activity_badge_achievemts.xml
@@ -9,76 +9,87 @@
     tools:context="com.example.umorning.activities.BadgeAchievementsActivity">
 
     <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical|center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
         <TableRow
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="2dp">
+            android:layout_marginBottom="3dp">
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:layout_gravity="left"
+                android:gravity="left">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge1"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minHeight="90dp"
+                    android:minWidth="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text1" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text1"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:layout_gravity="center_horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge2"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minHeight="90dp"
+                    android:minWidth="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text2" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text2"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:layout_gravity="right">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge3"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minHeight="90dp"
+                    android:minWidth="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text3" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text3"
+                    android:layout_gravity="center_horizontal"
+                    />
             </LinearLayout>
 
         </TableRow>
@@ -87,7 +98,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="2dp">
+            android:layout_marginBottom="3dp">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -99,15 +110,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge4"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minHeight="90dp"
+                    android:minWidth="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text4" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text4"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
@@ -120,36 +133,41 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge5"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minHeight="90dp"
+                    android:minWidth="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text5" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text5"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/linearLayout3">
+                android:id="@+id/linearLayout3"
+                android:layout_gravity="right">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge6"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minWidth="90dp"
+                    android:minHeight="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text6" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text6"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
         </TableRow>
 
@@ -157,7 +175,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="2dp">
+            android:layout_marginBottom="3dp">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -169,15 +187,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge7"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minHeight="90dp"
+                    android:minWidth="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text7" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text7"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
@@ -190,36 +210,41 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge8"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minWidth="90dp"
+                    android:minHeight="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text8" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text8"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/linearLayout6">
+                android:id="@+id/linearLayout6"
+                android:layout_gravity="right">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge9"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minHeight="90dp"
+                    android:minWidth="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text9" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text9"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
         </TableRow>
 
@@ -238,15 +263,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge10"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minWidth="90dp"
+                    android:minHeight="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text10" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text10"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
@@ -259,36 +286,41 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge11"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minHeight="90dp"
+                    android:minWidth="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text11" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text11"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/linearLayout9">
+                android:id="@+id/linearLayout9"
+                android:layout_gravity="right">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/badge12"
-                    android:minHeight="110dp"
-                    android:minWidth="110dp" />
+                    android:minWidth="90dp"
+                    android:minHeight="90dp"
+                    android:layout_gravity="center_horizontal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/text12" />
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/text12"
+                    android:layout_gravity="center_horizontal" />
             </LinearLayout>
         </TableRow>
 
