--- a/App/src/main/res/layout/activity_badge_achievements.xml
+++ b/App/src/main/res/layout/activity_badge_achievements.xml
@@ -19,14 +19,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="3dp">
+            android:layout_marginBottom="3dp"
+            android:layout_gravity="center_horizontal">
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="left"
-                android:gravity="left">
+                android:layout_height="fill_parent">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -42,14 +41,15 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text1"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center_horizontal">
+                android:layout_height="fill_parent">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -57,7 +57,7 @@
                     android:id="@+id/badge2"
                     android:minHeight="90dp"
                     android:minWidth="90dp"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -65,14 +65,15 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text2"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="right">
+                android:layout_height="fill_parent">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -89,7 +90,8 @@
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text3"
                     android:layout_gravity="center_horizontal"
-                    />
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
         </TableRow>
@@ -98,7 +100,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="3dp">
+            android:layout_marginBottom="3dp"
+            android:layout_gravity="center_horizontal">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -120,7 +123,9 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text4"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout
@@ -143,15 +148,16 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text5"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/linearLayout3"
-                android:layout_gravity="right">
+                android:id="@+id/linearLayout3">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -167,7 +173,9 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text6"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
         </TableRow>
 
@@ -175,7 +183,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="3dp">
+            android:layout_marginBottom="3dp"
+            android:layout_gravity="center_horizontal">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -197,7 +206,9 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text7"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout
@@ -220,15 +231,16 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text8"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/linearLayout6"
-                android:layout_gravity="right">
+                android:id="@+id/linearLayout6">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -244,14 +256,17 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text9"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
         </TableRow>
 
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:gravity="center_vertical|center_horizontal">
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_gravity="center_horizontal">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -273,7 +288,9 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text10"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout
@@ -296,15 +313,16 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text11"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/linearLayout9"
-                android:layout_gravity="right">
+                android:id="@+id/linearLayout9">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -320,7 +338,9 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/text12"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:minWidth="110dp"
+                    android:gravity="center" />
             </LinearLayout>
         </TableRow>
 
